# envis-app

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  index.html  package.json  planner_todo.md  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/prompts/: code.prompt.md
.github/workflows/: release.yml
scripts/: extract-changelog.js  release.js
src/: App.md  App.tsx  Loading.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  rustc-ice-2026-04-03T10_09_11-75150.txt  rustc-ice-2026-04-17T05_54_20-9411.txt  rustc-ice-2026-04-17T06_24_26-60397.txt  rustc-ice-2026-04-17T06_25_13-61243.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/envis-cli/: Cargo.toml
src-tauri/crates/envis-cli/src/: main.rs
src-tauri/crates/envis-cli/src/cli/: handlers.rs  mod.rs
src-tauri/crates/envis-core/: Cargo.toml
src-tauri/crates/envis-core/src/: lib.md  lib.rs
src-tauri/crates/envis-core/src/cli/: handlers.rs  mod.rs
src-tauri/crates/envis-core/src/manager/: app_config_manager.rs  env_serv_data_manager.md  env_serv_data_manager.rs  environment_manager.rs  export_import.rs  file_manager.rs  host_manager.md  host_manager.rs  mod.rs  service_manager.md  service_manager.rs  shell_manager.md  shell_manamger.rs
src-tauri/crates/envis-core/src/manager/builders/: envvars.rs  metadata.rs  mod.rs
src-tauri/crates/envis-core/src/manager/services/: custom.rs  download_manager.rs  host.rs  mingw.rs  mod.rs  mongodb.rs  redis.rs  standard.rs  traits.rs
src-tauri/crates/envis-core/src/manager/services/dnsmasq/: dnsmasq.rs
src-tauri/crates/envis-core/src/manager/services/java/: gradle.rs  maven.rs  mod.rs
src-tauri/crates/envis-core/src/manager/services/mariadb/: mariadb.rs
src-tauri/crates/envis-core/src/manager/services/mysql/: mod.rs  mysql.rs
src-tauri/crates/envis-core/src/manager/services/nasm/: mod.rs
src-tauri/crates/envis-core/src/manager/services/nginx/: mod.rs  nginx.md  nginx.rs
src-tauri/crates/envis-core/src/manager/services/nodejs/: mod.rs  nodejs.rs
src-tauri/crates/envis-core/src/manager/services/postgresql/: mod.rs  postgresql.rs
src-tauri/crates/envis-core/src/manager/services/python/: mod.rs
src-tauri/crates/envis-core/src/manager/services/rust/: mod.rs  rust.rs
src-tauri/crates/envis-core/src/types/: mod.md  mod.rs
src-tauri/crates/envis-core/src/utils/: mod.rs  path.rs
src-tauri/crates/envis-gui/: Cargo.toml
src-tauri/crates/envis-gui/src/: lib.rs  status_events.rs  tray.rs  window.rs
src-tauri/crates/envis-gui/src/tauri_command/: app_config_commands.rs  env_serv_data_commands.rs  file_commands.rs  system_info_commands.rs
src-tauri/crates/envis-gui/src/tauri_command/services/: mariadb_commands.rs  nodejs_commands.rs  postgresql_commands.rs  redis_commands.rs  rust_commands.rs  ssl_commands.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.md  lib.rs  main.md  main.rs  status_events.md  status_events.rs  tray.rs
src-tauri/src/cli/: handlers.rs  mod.rs
src-tauri/src/manager/: app_config_manager.rs  env_serv_data_manager.rs  environment_manager.rs  exit_cleanup_manager.rs  file_manager.rs  host_manager.rs  mod.rs  service_manager.rs  shell_manamger.rs  system_info_manager.rs
src-tauri/src/manager/builders/: envpaths.rs  envvars.rs  metadata.rs
src-tauri/src/manager/services/: custom.rs  download_manager.rs  host.rs  java.rs  mod.rs  mongodb.rs  redis.rs  ssl.rs  standard.rs  traits.rs
src-tauri/src/manager/services/dnsmasq/: dnsmasq.rs  mod.rs
src-tauri/src/manager/services/java/: gradle.rs  java.rs  maven.rs
src-tauri/src/manager/services/mariadb/: mariadb.rs  mod.rs
src-tauri/src/manager/services/mysql/: mysql.rs
src-tauri/src/manager/services/nasm/: nasm.rs
src-tauri/src/manager/services/nginx/: nginx.rs
src-tauri/src/manager/services/nodejs/: mod.rs  nodejs.rs
src-tauri/src/manager/services/postgresql/: postgresql.rs
src-tauri/src/manager/services/python/: mod.rs  python.rs
src-tauri/src/tauri_command/: app_config_commands.rs  env_serv_data_commands.rs  environment_commands.rs  file_commands.rs  mod.rs  service_commands.rs  system_info_commands.rs
src-tauri/src/tauri_command/services/: custom_commands.rs  dnsmasq_commands.rs  host_commands.rs  java_commands.rs  mariadb_commands.rs  mod.rs  mongodb_commands.rs  mysql_commands.rs  nasm_commands.rs  nginx_commands.rs  nodejs_commands.rs  postgresql_commands.rs  python_commands.rs  redis_commands.rs  rust_commands.rs  ssl_commands.rs
src-tauri/src/types/: mod.rs
src-tauri/src/utils/: command.rs  mod.rs
src/components/: system-monitor.tsx
src/components/ui/: button.tsx  calendar.tsx  dialog.tsx  input.tsx  patch.css  pie-chart.tsx  resizable.tsx  scroll-area.tsx  select.tsx  tabs.tsx  tooltip.tsx
src/hooks/: appSettings.ts  env-serv-data.md  env-serv-data.ts  environment.md  environment.ts  file-operations.ts  index.ts  log.ts  service-pollers.ts  service.ts  system-info.ts  useAppVersion.ts  useClickOutsideBlur.ts  useI18n.ts  useRustLogger.ts  useStatus.md  useStatus.ts  useTheme.ts
src/hooks/services/: custom.ts  dnsmasq.ts  host.ts  java.ts  mariadb.ts  mongodb.ts  mysql.ts  nginx.ts  nodejs.ts  postgresql.ts  python.ts  redis.ts  rust.ts  ssl.ts
src/i18n/: config.md  config.ts
src/i18n/locales/: en.json  zh.json
src/ipc/: env-serv-data.ts  environment.ts  file-operations.ts  service-download-progress.ts  service.ts  system-info.ts  systemSettings.ts
src/ipc/services/: custom.ts  dnsmasq.ts  host.ts  java.ts  mariadb.ts  mongodb.ts  mysql.ts  nginx.ts  nodejs.ts  postgresql.ts  python.ts  redis.ts  rust.ts  ssl.ts
src/lib/: tauri-api.ts  utils.ts
src/pages/: app-footer.tsx  index.tsx  system-monitor.tsx  update-dialog.tsx  welcome-fragment.tsx
src/pages/ai-panel/: ai-panel.tsx
src/pages/env-panel/: env-panel-header.tsx  (+1 more)
src/store/: ai.ts  appSettings.ts  environment.ts  index.ts  log.ts  service.ts
src/types/: ai.ts  index.ts  ipc.ts  service.ts  shims.d.ts
src/utils/: const.ts  logger.ts  mongodb-config-parser.ts  patch.ts  sort.ts  string.ts  theme.ts  tray.ts
(+40 files in other folders)
