[workspace]
members = [
    ".",
    "crates/envis-core",
    "crates/envis-cli",
]
resolver = "2"

[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1.0", features = ["full"] }
anyhow       = "1.0"
log          = "0.4"
chrono       = { version = "0.4.41", features = ["serde"] }
reqwest      = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
uuid         = { version = "1.0", features = ["v4", "serde"] }
walkdir      = "2"
flate2       = "1.1.4"
tar          = "0.4.44"
zip          = "6.0.0"
serde_yaml   = "0.9"
rand         = "0.8"
xmltree      = "0.11"
base64       = "0.22"
image        = "0.25.8"
num_cpus     = "1.17.0"
dirs         = "5.0"
sysinfo      = "0.30"
envis-core   = { path = "crates/envis-core" }

# ── envis-app (Tauri GUI 主包) ─────────────────────────────────────────

[package]
name = "envis"
version = "0.12.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "envis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
envis-core           = { workspace = true, features = ["tauri-integration"] }
tauri                = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-opener  = "2.5.0"
tauri-plugin-dialog  = "2"
tauri-plugin-log     = "2.8.0"
tauri-plugin-cli     = "2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2"
serde                = { workspace = true }
serde_json           = { workspace = true }
tokio                = { workspace = true }
anyhow               = { workspace = true }
log                  = { workspace = true }
dirs                 = { workspace = true }
sysinfo              = { workspace = true }
chrono               = { workspace = true }
image                = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater         = "2"

