[package]
name    = "envis-core"
version = "0.12.0"
edition = "2021"

[features]
# 启用该 feature 后，file_manager 中依赖 tauri/tauri_plugin_dialog 的对话框方法才会编译
# envis-app（GUI）启用此 feature；envis-cli 不启用（保持零 Tauri 依赖）
tauri-integration = ["dep:tauri", "dep:tauri-plugin-dialog"]

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
log                = { workspace = true }
chrono             = { workspace = true }
reqwest            = { workspace = true }
futures-util       = { workspace = true }
uuid               = { workspace = true }
walkdir            = { workspace = true }
flate2             = { workspace = true }
tar                = { workspace = true }
zip                = { workspace = true }
serde_yaml         = { workspace = true }
rand               = { workspace = true }
xmltree            = { workspace = true }
base64             = { workspace = true }
image              = { workspace = true }
num_cpus           = { workspace = true }
dirs               = { workspace = true }
sysinfo            = { workspace = true }
tauri              = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.0"
