[package]
name    = "envis-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
envis-core           = { workspace = true, features = ["tauri-integration"] }
envis-cli            = { workspace = true }
tauri                = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-opener  = "2.5.0"
tauri-plugin-dialog  = "2"
tauri-plugin-log     = "2.8.0"
tauri-plugin-cli     = "2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2"
serde                = { workspace = true }
serde_json           = { workspace = true }
tokio                = { workspace = true }
anyhow               = { workspace = true }
log                  = { workspace = true }
dirs                 = { workspace = true }
sysinfo              = { workspace = true }
chrono               = { workspace = true }
image                = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater         = "2"
